--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
- <Head>
-     <meta charset="utf-8">
-     <title>Memphis Tigers Football</title>
-</Head>
+ <head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>Memphis Tigers Football</title>
+</head>
 <body>
     <h1>Memphis Tigers Football!</h1>
     <img src="https://i.pinimg.com/originals/14/c9/02/14c9021334519b396a232789d0a718e3.jpg" width="500">
@@ -14,11 +15,11 @@
       The team's head coach is Ryan Silverfield. <br>
       Since their inaugural season in 1912, the Memphis Tigers have won over <em>450 games </em>and appeared in <strong>13 bowl games</strong>.<br>
       The program has also claimed eight conference championships with the most recent coming in 2019.</p>
-    <h2>Bowl Games</h2>
-    <img src="">
-    <h3>Table of contents</h3>
+    <h2>Table of contents</h2>
     <ul>
-         <li>Players</li>
+         <li><a href="">Players</li></a>
+         <li><a href="">Coaches</li></a>
+        
     </ul>
 </body>
 </html>
