--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1>Memphis Tigers Football!</h1>
     <img src="https://i.pinimg.com/originals/14/c9/02/14c9021334519b396a232789d0a718e3.jpg" width="500">
     <h2>History</h2>
-    <p>Memphis Tigers football team represents the University of Memphis in college football in the NCAA Division I Football Bowl Subdivision.<br>
+    <p id="memphis-history">Memphis Tigers football team represents the University of Memphis in college football in the NCAA Division I Football Bowl Subdivision.<br>
      The Tigers play in the American Athletic Conference as an all-sports member.
       They play home games at Liberty Bowl Memorial Stadium.<br>
       The team's head coach is Ryan Silverfield. <br>
       Since their inaugural season in 1912, the Memphis Tigers have won over <em>450 games </em>and appeared in <strong>13 bowl games</strong>.<br>
       The program has also claimed eight conference championships with the most recent coming in 2019.</p>
-    <h2>Table of contents</h2>
+    <h2>Table of contents.</h2>
     <ul>
          <li><a href="">Players</li></a>
          <li><a href="">Coaches</li></a>
