--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"
     <meta charset="utf-8">
     <title>Memphis Tigers Football</title>
 </head>
